# color-lut-tweaks

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  release-please-config.json
.agents/: AGENTS.md
.agents/architecture/: AGENTS.md
.agents/notes/: windows-acm.md
.github/: CODEOWNERS
.github/workflows/: pr-checks.yml  (+1 more)
configs/: Identity.config.json  Xiaomi G Pro 27i - Native to sRGB and EOTF Fix (Recommended).config.json  Xiaomi G Pro 27i - Native to sRGB and EOTF Fix with Peak Color Correction.config.json  Xiaomi G Pro 27i CHIMOLOG Calibration (More Contrast).config.json  Xiaomi G Pro 27i CHIMOLOG Calibration (Personal Preference).config.json  Xiaomi G Pro 27i CHIMOLOG Linear RGB Calibration.config.json  xiaomi-27i-pro-hdr-eotf-correction.json  xiaomi-g-pro-27i-chimolog-more-contrast.config.json  xiaomi-g-pro-27i-chimolog-personal-preference.config.json  xiaomi-g-pro-27i-chimolog.config.json  xiaomi-g-pro-27i.config.json
docs/: guide-xiaomi-g-pro-27i.md  user-guide.md
luts/: Xiaomi G Pro 27i HDR (D65 PQ) (Linear RGB) (chimolog).lut  xiaomi-g-pro-27i-hdr-eotf-correction-no-rgb-diff.lut
profiles/: Xiaomi G Pro 27i - DisplayCal (ColorControl, 1200PB) (HDR).icm  Xiaomi G Pro 27i - Windows Calibration (1200PB) (HDR).icc  Xiaomi G Pro 27i HDR DisplayCal.icm
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  lut.rs  main.rs  startup.rs  tray.rs  updates.rs  windows_settings.rs
tests/: app_apply.rs  app_reset.rs  app_start.rs  cli.rs  lut_loading.rs  version_check.rs  windows_settings.rs
(+18 files in other folders)
