[package]
name = "color-lut-tweaks"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winres = "0.1"
